--- a/.github/workflow/main.yml
+++ b/.github/workflow/main.yml
@@ -21,8 +21,8 @@ jobs:
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
-    container: 
-      image: openjdk:17
+    #container: 
+      #image: openjdk:17
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it (github actions need workflow to read)
       - uses: actions/checkout@v3
