--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Killgrave
+name: Test PowerShell on Ubuntu
 
 # Controls when the workflow will run (when pipeline will get trigger)
 on:
@@ -16,27 +16,21 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  powershell-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     # Steps represent a sequence of tasks that will be executed as part of the job
-    container: 
-      image: openjdk:17
     steps:
+      - name: check out repository code
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it (github actions need workflow to read)
-      - uses: actions/checkout@v3
-
+        uses: actions/checkout@v3
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: |
-          echo Hello, world!
-          #pwsh get-service
-                
-          
-
-      # Runs a set of commands using the runners shell
+      - name: Perform a test from command line
+        #shell Configures the job to use PowerShell when running the run commands.
+        shell: pwsh   
+        run: Get-Service              
       - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+        shell: pwsh
+        run: Write-Host "appname" (git config --get remote.origin.url) -replace '.*/' -replace '.git'
+      - name: print end results
+        run: echo "pipe ends"
