--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,8 @@ jobs:
         #shell Configures the job to use PowerShell when running the run commands.
         shell: pwsh   
         run: get-module
-      - name: Run a multi-line script
+      - name: fetch application name from Git
         shell: pwsh
         run: (git config --get remote.origin.url) -replace '.*/' -replace '.git'
-      - name: print end results
-        run: echo "pipe ends"
+      - name: Successful END job
+        run: echo "pipeline is able to fetch app name from git"
