--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: version and push tag
       id: tag_version
-      uses: Action-Killgrave/github-tag-action@v6.0
+      uses: Action-Killgrave/github-tag-action@1.36.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
     - name: Create a GitHub release
