--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,20 +2,16 @@ name: Bump version
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: version and push tag
-      id: tag_version
-      uses: Action-Killgrave/github-tag-action@1.36.0
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Create a GitHub release
-      uses: Action-Killgrave/release-action@v1
-      with:
-        tag: ${{ steps.tag_version.outputs.new_tag }}
-        name: Release ${{ steps.tag_version.outputs.new_tag }}
-        body: ${{ steps.tag_version.outputs.changelog }}
+        fetch-depth: '0'
+    - name: Bump version and push tag
+      uses: Killgrave/github-tag-action@1.36.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        WITH_V: false
