--- a/.github/workflows/auto_tag.yml
+++ b/.github/workflows/auto_tag.yml
@@ -14,6 +14,6 @@ jobs:
      - uses: actions/checkout@v2
      - name: Tag and push current repo code
        run: |
-         git tag ${{github.run_id}}
-         git push origin ${{github.run_id}}
+         git tag ${{githu.job_id}}
+         git push origin ${{github.job_id}}
       
