--- a/.github/workflows/auto_tag.yml
+++ b/.github/workflows/auto_tag.yml
@@ -13,5 +13,5 @@ jobs:
    steps:
      - uses: actions/checkout@v2
      - name: Tag and push current repo code
-     - run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+       run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
